# diagnova-monorepo

./: .dockerignore  .env.example  .gitignore  docker-compose.ec2.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  project-auth.postman_collection.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml  deploy.yml
apps/ai/: .env.example  FASTAPI_NEST_API_CONTRACT.md  lung_model.py  main.py  model.py  requirements.txt  schemas.py
apps/api/: .env.example  package.json  tsconfig.build.tsbuildinfo  tsconfig.json  tsconfig.tsbuildinfo
apps/api/scripts/: run-migration.js
apps/api/src/: app.module.ts  data-source.ts  main.ts
apps/api/src/cases/: cases.controller.ts  cases.module.ts  cases.service.ts
apps/api/src/config/: configuration.ts  database.config.ts  s3.config.ts
apps/api/src/internal/: internal.controller.ts  internal.module.ts
apps/api/src/migrations/: 1746000000000-MakeClinicDescriptionNullable.ts  1746100000000-AddGenderToPatient.ts
apps/api/src/shared/: global.module.ts  index.ts
apps/api/src/sse/: sse.service.ts
apps/fastapi/: package.json  pyproject.toml  requirements.txt
apps/fastapi/app/: __init__.py  main.py
apps/web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.tsbuildinfo  tsconfig.json
apps/web/src/: App.tsx  api.ts  index.css  main.tsx  vite-env.d.ts
apps/web/src/app/: App.tsx
docker/: ai.Dockerfile  api.Dockerfile  nginx-entrypoint.sh  nginx-proxy.Dockerfile  web-entrypoint.sh  web.Dockerfile
infra/: README.md
ngnix/: proxy.conf
(+54 files in other folders)
